# Mobile-Robot-Control-Navigation-With-Artificial-Vision-And-ROS2

./: README.md
Sensorica_Carro/: CMakeLists.txt  platformio.ini
Sensorica_Carro/partitions/: no_ota_4mb.csv
Sensorica_Carro/src/: CMakeLists.txt  encoder.c  encoder.h  lidar_ms200.c  lidar_ms200.h  main.c  ms200.c  ms200.h  pid.c  pid.h  pwm_motor.c  pwm_motor.h  ring_buffer.c  ring_buffer.h  servo.c  servo.h  uart1.c  uart1.h
ros2_ws/bags/ptz_cam_20251014_155221/: metadata.yaml  ptz_cam_20251014_155221_0.mcap
ros2_ws/bags/ptz_cam_20251014_155400/: metadata.yaml  ptz_cam_20251014_155400_0.mcap
ros2_ws/bags/ptz_cam_20251014_155557/: metadata.yaml  ptz_cam_20251014_155557_0.mcap
ros2_ws/src/BNO055/: bno055_euler.py  bno055_raw_with_reset.py  bno055_raw_with_reset_gpiozero.py
ros2_ws/src/SLAM/: package.xml  setup.py
ros2_ws/src/bno055_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/bno055_ros/bno055_ros/: bno_node.py
ros2_ws/src/bno055_ros/install/: local_setup.sh  setup.sh
ros2_ws/src/bno055_ros/install/bno055_ros/lib/bno055_ros/: BNO
ros2_ws/src/bno055_ros/install/bno055_ros/share/bno055_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/src/bno055_ros/log/: latest_build
ros2_ws/src/control_car/: package.xml  setup.cfg  setup.py
ros2_ws/src/control_car/control_car/: camara.py  control_node.py  control_node.pyy
ros2_ws/src/lidar_ms200_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/lidar_ms200_ros/lidar_ms200_ros/: lidar_node.py
ros2_ws/src/selector_input/: package.xml  setup.cfg  setup.py
ros2_ws/src/selector_input/selector_input/: selector_node.py
ros2_ws/src/sens_car_esp/: package.xml  setup.cfg  setup.py
ros2_ws/src/sens_car_esp/install/: local_setup.sh  setup.sh
ros2_ws/src/sens_car_esp/install/sens_car_esp/lib/sens_car_esp/: Sens_Car_ESP
ros2_ws/src/sens_car_esp/install/sens_car_esp/share/sens_car_esp/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/src/sens_car_esp/log/: latest_build
ros2_ws/src/sens_car_esp/sens_car_esp/: serial_node.py
ros2_ws/src/vision_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/vision_ros/resource/: vision_ros
ros2_ws/src/vision_ros/vision_ros/: vision_node.py
