<?xml version="1.0"?>
<package format="3">
  <name>lidar_ms200_ros</name>
  <version>0.1.0</version>
  <description>MS200 LIDAR on Raspberry Pi (UART) publishing /Distancia</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
