<?xml version="1.0"?>
<package format="3">
  <name>sens_car_esp</name>
  <version>0.1.0</version>
  <description>Bridge serial ROS2 &lt;-&gt; ESP for car sensors/commands</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

